[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
serde = "1.0.152"
serde-pickle = "1.1.1"
serde_json = "1.0.91"
serde_yaml = "0.9.16"
toml = "0.5.10"
